src/test/testFiles/invalid/semanticErrors/incompatibleForwardDeclarationParameterType.val
fun func1(x: number) {
    let y: number = func2(5);
}

fun func2(x: Stack<number>): number {
    return 10;
}

func1(5);